--- a/EditableListView_Demo/EditableListView_Demo.csproj
+++ b/EditableListView_Demo/EditableListView_Demo.csproj
@@ -79,11 +79,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="EditBlock.cs" />
+    <Compile Include="ListViewEditBlock.cs" />
+    <Compile Include="Window1.xaml.cs">
+      <DependentUpon>Window1.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
-    <Compile Include="EditBox.cs" />
-    <Compile Include="EditBoxAdorner.cs" />
+    <Compile Include="EditBlockAdorner.cs" />
     <Compile Include="FileModel.cs" />
     <Compile Include="ValidationRules.cs" />
     <Compile Include="MainWindow.xaml.cs">
@@ -100,6 +104,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Themes\Generic.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
